--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Upload statics to S3 server",
   "main": "index.js",
+  "license": "ISC",
   "bin": {
     "s3-folder-upload": "./bin/s3-folder-upload.js"
   },
