--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "log-update": "1.0"
   },
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "0.16.0",
     "eslint": "3.3.1",
     "eslint-config-standard": "6.0.0",
     "eslint-plugin-promise": "2.0.1",
