--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "homepage": "https://github.com/miduga/s3-folder-upload/#readme",
   "dependencies": {
     "async": "2.0",
-    "aws-sdk": "2.5",
+    "aws-sdk": "^2.6.1",
     "log-update": "1.0"
   },
   "devDependencies": {
     "ava": "0.16.0",
-    "eslint": "3.3.1",
+    "eslint": "^3.5.0",
     "eslint-config-standard": "6.0.0",
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-standard": "2.0.0"
