--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "s3-folder-upload": "./bin/s3-folder-upload.js"
   },
   "scripts": {
-    "test": "./node_modules/.bin/eslint *.js */*.js && ava"
+    "test": "./node_modules/.bin/eslint *.js */*.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,14 @@
   },
   "homepage": "https://github.com/miduga/s3-folder-upload/#readme",
   "dependencies": {
-    "async": "2.0",
+    "async": "^2.1.4",
     "aws-sdk": "^2.6.1",
     "log-update": "1.0"
   },
   "devDependencies": {
-    "ava": "0.16.0",
     "eslint": "^3.5.0",
-    "eslint-config-standard": "6.0.0",
-    "eslint-plugin-promise": "2.0.1",
-    "eslint-plugin-standard": "2.0.0"
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
