--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s3-folder-upload",
-  "version": "2.0.5-beta.0",
+  "version": "2.0.4",
   "description": "Upload statics to S3 server",
   "main": "index.js",
   "license": "ISC",
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/miduga/s3-folder-upload/#readme",
   "dependencies": {
     "async": "3.1.0",
-    "aws-sdk": "2.585.0",
+    "aws-sdk": "2.603.0",
     "globby": "10.0.1",
     "log-update": "3.3.0",
     "minimist": "1.2.0"
