--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s3-folder-upload",
-  "version": "3.0.0-beta.2",
+  "version": "3.0.0-beta.3",
   "description": "Upload statics to S3 server",
   "main": "index.js",
   "license": "ISC",
@@ -22,10 +22,8 @@
   },
   "homepage": "https://github.com/miduga/s3-folder-upload/#readme",
   "dependencies": {
-    "async": "3.2.0",
-    "@aws-sdk/client-s3": "1.0.0-rc.3",
-    "globby": "11.0.1",
-    "log-update": "4.0.0",
+    "@aws-sdk/client-s3": "1.0.0-rc.4",
+    "@supercharge/promise-pool": "1.5.0",
     "minimist": "1.2.5"
   },
   "devDependencies": {
